--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <header id="masthead">
+  <!-- <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
       <nav>
@@ -23,13 +23,32 @@
         <a href="contact.html">Contact</a>
       </nav>
     </div>
-  </header>
+  </header> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="masthead">
+    <a class="navbar-brand" href="#" id="logo">Jorge Mancero</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Contact</h1>
 
-      <form id="contact-form">
+      <!-- <form id="contact-form">
         <ul>
           <li>
             <label for="name">Name</label>
@@ -45,6 +64,22 @@
           </li>
         </ul>
         <input type="submit">
+      </form> -->
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <!-- <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div> -->
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
     </section>
