--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<!-- 
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
@@ -23,7 +23,26 @@
         <a href="contact.html">Contact</a>
       </nav>
     </div>
-  </header>
+  </header> -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" id="masthead">
+    <a class="navbar-brand" href="#" id="logo">Jorge Mancero</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <div id="main-container" class="container">
     <section class="main-section">
