--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       <!-- end -->
     <!-- </div> -->
   </header>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>About Me</h1>
@@ -57,6 +59,9 @@
     </section>
 
   </div>
+  </div>
+  </div>
+  
   
   <footer>
     <div class="container">
