--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <h1>About Me</h1>
 
       <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <!-- <img src="assets/images/cat.jpg" class="img-fluid" class="auth-image" alt="Responsive image"> -->
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
@@ -61,13 +62,19 @@
   </div>
   </div>
   </div>
+
   
-  
-  <footer>
+  <!-- <footer>
     <div class="container">
       Copyright &copy; 
     </div>
+  </footer> -->
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted">Copyright &copy</span>
+    </div>
   </footer>
+  
 </body>
 
 </html>
