--- a/index.html
+++ b/index.html
@@ -64,17 +64,11 @@
   </div>
 
   
-  <!-- <footer>
+  <footer>
     <div class="container">
       Copyright &copy; 
     </div>
-  </footer> -->
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text-muted">Copyright &copy</span>
-    </div>
   </footer>
-  
 </body>
 
 </html>
