rows and columns updated

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,9 @@
     </div>
   </nav>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Contact</h1>
@@ -88,6 +91,9 @@
       </form>
 
     </section>
+    </div>
+    </div>
+    
 
   </div>
 
