--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,10 @@
     </div>
   </nav>
 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
@@ -75,6 +79,8 @@
       </div>
 
     </section>
+    </div>
+    </div>
 
   </div>
 
